--- a/style.css
+++ b/style.css
@@ -61,9 +61,14 @@ ul {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+  transition: transform 0.3 ;
+}
+.card:hover {
+  transform: translateY(-15px) ;
 }
 
 .card__header {
+  
   position: relative;
 }
 
